lucia-macros/tests/ui/error_enum/bad_res.stderr
error: Response data must end with the `Res` suffix.
  --> tests/ui/error_enum/bad_res.rs:11:10
   |
11 |   struct ResDSA;
   |          ^^^^^^
